# nicks-overlay-vendored

./: .editorconfig  .gitmodules  README.md  TODO.md
.github/: dependabot.yml
.github/actions/setup-language/: action.yml
.github/workflows/: build-dep-tarballs.yml  build-go-dep-tarballs.yml  docs_pr_blocker.yml  manual-build-dep-barballs.yml  manual-build-dep-tarballs.yml  manual-build-go-dep-tarballs.yml  prune-old-releases.yml
ci/: TODO.md  build-deps.sh  build-go-deps.sh  build-matrix.sh  build-rust-deps.sh  create-release.sh  extract-vendored.sh  prune-old-releases.sh
config/: go_modules.json  vendor_manifest.json
scripts/: generate_ebuild_index.py  mypy.ini  pylock.toml  pyproject.toml  requirements.in  ruff.toml  vendor_crates.py
scripts/lib/: README.md  build-common.lib.sh  logging.lib.sh  logging.sh  utils.lib.sh
tests/: build-matrix.bats
